# basic_cpp_project

./: .clang-format  .gitignore  CMakeLists.txt  Main.cpp  Main.h  README.md
cmake/clang-format/: FindClangFormat.cmake  clang-format.cmake
